# sensorweb

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirement.txt
config/: settings.py  urls.py
fileupload/: forms.py  models.py  urls.py  views.py
fileupload/templates/: base.html  fileupload.html
picam/: apps.py  models.py  urls.py  views_backup.py  views_try.py
picam/templates/picam/: picam2.html  picam3.html  webcam.html  webcam2.html
sensorweb/: admin.py  apps.py  models.py  urls.py  views.py
sensorweb/management/commands/: fetch_data.py  mqtt_sub_db_upload.py
sensorweb/templates/home/: base.html  index.html
sensorweb/templates/samples/: sample1.html  sample10.html  sample11.html  sample2.html  sample3.html  sample4.html  sample5.html  sample6.html  sample7.html  sample8.html  sample9.html  style.css
sensorweb/templates/sensorweb/: main.html  table_chart.html  table_chart2.html  tf_test_coco_object_detection.html  tf_test_mnist.html
sensorweb/templates/sub/: 1_1.html  1_2.html  1_3.html  1_4.html  1_5.html  1_6.html  2_1.html  2_2.html  2_3.html  3_1.html  3_2.html  3_3.html  4_2.html  5_1.html  5_2.html  5_3.html  6_1.html  6_2.html  6_3.html
static/css/: Chart.min.css  anibox.css  btn.css  common.css  picam.css  style.css  style2.css  swiper.min.css
static/img_test/: OIP.jfif
static/js/: common.js  picam.js  swiper.min.js  tf.min.js
