[project]
name = "sensorweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.2.2",
    "django>=5.2.1",
    "django-bootstrap-icons>=0.9.0",
    "django-bootstrap5>=25.1",
    "django-chartjs>=2.3.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "mysqlclient>=2.2.7",
    "opencv-python>=4.11.0.86",
    "paho-mqtt>=2.1.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "ultralytics>=8.3.131",
]
